// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enableBackground renders 0 1`] = `
Array [
  .c0 {
  enable-background: 0;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: 0;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: 0;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`enableBackground renders function 1`] = `
Array [
  .c0 {
  enable-background: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: has;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: has;
}

<div
    className="c0"
  />,
]
`;

exports[`enableBackground renders invalid theme path 1`] = `
Array [
  .c0 {
  enable-background: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`enableBackground renders negative number 1`] = `
Array [
  .c0 {
  enable-background: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`enableBackground renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    enable-background: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    enable-background: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    enable-background: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    enable-background: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    enable-background: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    enable-background: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    enable-background: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    enable-background: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    enable-background: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    enable-background: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    enable-background: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    enable-background: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    enable-background: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    enable-background: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    enable-background: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    enable-background: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`enableBackground renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    enable-background: July;
  }
}

@media April {
  .c0 {
    enable-background: August;
  }
}

@media January {
  .c0 {
    enable-background: September;
  }
}

@media April {
  .c0 {
    enable-background: November;
  }
}

@media June {
  .c0 {
    enable-background: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    enable-background: July;
  }
}

@media April {
  .c0 {
    enable-background: August;
  }
}

@media January {
  .c0 {
    enable-background: September;
  }
}

@media April {
  .c0 {
    enable-background: November;
  }
}

@media June {
  .c0 {
    enable-background: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    enable-background: January;
  }
}

@media April {
  .c0 {
    enable-background: December;
  }
}

@media January {
  .c0 {
    enable-background: April;
  }
}

@media April {
  .c0 {
    enable-background: May;
  }
}

@media June {
  .c0 {
    enable-background: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    enable-background: January;
  }
}

@media April {
  .c0 {
    enable-background: December;
  }
}

@media January {
  .c0 {
    enable-background: April;
  }
}

@media April {
  .c0 {
    enable-background: May;
  }
}

@media June {
  .c0 {
    enable-background: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`enableBackground renders postitive number 1`] = `
Array [
  .c0 {
  enable-background: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`enableBackground renders string 1`] = `
Array [
  .c0 {
  enable-background: July;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: July;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: June;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: June;
}

<div
    className="c0"
  />,
]
`;

exports[`enableBackground renders valid theme path 1`] = `
Array [
  .c0 {
  enable-background: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  enable-background: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
